--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3645,3 +3645,7 @@ body{
 .toastui-editor-defaultUI-toolbar{
 	padding: 4px 8px !important;
 }
+
+.italic toastui-editor-toolbar-icons{
+	margin:0px !important;
+}
