--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3646,11 +3646,15 @@ body{
 	padding: 4px 8px !important;
 }
 
-.italic toastui-editor-toolbar-icons{
-	margin:0px !important;
+.toastui-editor-toolbar-icons{
+	margin: 0px !important;
 }
 .toastui-editor-defaultUI{
 	border:unset !important;
 	border-radius: 0px !important;
-	background-color: #F3F3F3;
+	background-color: #F3F3F3 !important;
+}
+
+.ProseMirror toastui-editor-contents{
+	background-color: #F3F3F3 !important;
 }
