--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3644,7 +3644,7 @@ body{
 
 .toastui-editor-defaultUI-toolbar{
 	padding: 4px 8px !important;
-	background-color: #F7F9FC !important;
+	background-color: #F3F3F3 !important;
 	border: unset !important;
 }
 
