--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3657,3 +3657,7 @@ body{
 	border-radius: 0px !important;
 	background-color: #F3F3F3 !important;
 }
+
+.toastui-editor-contents{
+	background-color: #F3F3F3 !important;
+}
