--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3660,6 +3660,7 @@ body{
 
 .toastui-editor-contents{
 	background-color: #F3F3F3 !important;
+	padding: 36px !important;
 }
 
 .toastui-editor-defaultUI-toolbar button {
