--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -2524,7 +2524,7 @@ figcaption {
 }
 
 .chat_input-button {
-  color: #525252;
+  color: #F2F2F2;
   cursor: pointer;
   background-color: #e7e7e7;
   border-radius: 999px;
