--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -2537,7 +2537,7 @@ figcaption {
 }
 
 .chat_input-button:hover {
-  background-color: #c9c9c9;
+  background-color: #d9d9d9;
 }
 
 .chat_input-text {
